2005-12-13  Brian Cameron  <brian.cameron@sun.com>

	* gui/Makefile.am: Fix Makefile so that 
	  libviciousui.a is used instead of 
	  libviciousui-gnome.a.  This allows all
	  GDM GUI programs to not require libgnome
	  anymore.  Only gdmsetup still requires
	  libgnomeui.

2005-12-13  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/slave.c, daemon/verify-pam.c,
	  gui/gdmXnestchooser.c, gui/gdmchooser.c,
	  gui/gdmcomm.c, gui/gdmflexiserver.c, 
	  gui/gdmlogin.c, gui/gdmsetup.glade,
	  gui/greeter/greeter.c:  Now consistantly use
	  "GDM" in strings instead of "gdm".  Fixes bug
	  #323221.  Thanks to Adam Weinberger
	  <adamw@gnome.org> for pointing this out.

2005-12-12  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.glade: Correct two typos.
	  "Backgroud" to "Background" and "WIndow" to
	  "Window".  Thanks to Asmund Skjaeveland
	  <aasmunds@fys.uio.no> for pointing this
	  out on gdm-list@gnome.org.

2005-12-12  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.[ch], daemongdmconfig.[ch]: Add
	  GET_SERVER_LIST and GET_SERVER_DETAILS 
	  sockets functions so that gdmflexiserver and
	  gdmconfig do not need to access the config
	  file for these, instead using the sockets
	  protocol.
	* docs/C/gdm.xml: Add docs for new sockets
	  commands.
	* configure.ac, gui/Makefile.am: Remove some
	  libgnome/libgnomeui dependencies.
	* gui/gdmcomm.c: Now close sockets connection
	  after 20 messages since the daemon gets mad
	  if you send more.
	* gui/gdmconfig.[ch]: New client functions for
	  getting server information via sockets.
	* gui/gdmflexiserver.c: Remove libgnome 
	  dependencies and now use new config 
	  mechanism for getting server info.
	* gui/gdmsetup.c: Now use new config
	  mechanism for reading from config file and
	  remove libgnome dependencies.  Cleaned up
	  the code a bit.  Now we don't call 
	  ve_config_get all over the place, which 
	  seems to speed up the start time.
